[issue31421] convert tryCatch* to macros to avoid closure allocations and various sorts of boxing (20%-40% performance improvement with Interchange G2)

--- a/pom.xml
+++ b/pom.xml
@@ -298,6 +298,7 @@
                                 <arg>-Ywarn-unused</arg>
                                 <arg>-Ywarn-unused-import</arg>
                                 <arg>-deprecation</arg>
+                                <!--<arg>-Ymacro-debug-lite</arg>-->
                             </args>
                         </configuration>
                     </execution>
