--- a/pom.xml
+++ b/pom.xml
@@ -154,17 +154,17 @@
             <dependency>
                 <groupId>net.liftweb</groupId>
                 <artifactId>lift-common_2.11</artifactId>
-                <version>2.6-M4</version>
+                <version>2.6-RC1</version>
             </dependency>
             <dependency>
                 <groupId>net.liftweb</groupId>
                 <artifactId>lift-util_2.11</artifactId>
-                <version>2.6-M4</version>
+                <version>2.6-RC1</version>
             </dependency>
             <dependency>
                 <groupId>net.liftweb</groupId>
                 <artifactId>lift-json_2.11</artifactId>
-                <version>2.6-M4</version>
+                <version>2.6-RC1</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
