[issue32353] switch maven repositories to nexus.corp.paytronix.com

--- a/pom.xml
+++ b/pom.xml
@@ -64,12 +64,12 @@
     <distributionManagement>
         <repository>
             <id>paytronix-releases</id>
-            <url>https://greylock.corp.paytronix.com/nexus/content/repositories/releases</url>
+            <url>https://nexus.corp.paytronix.com/nexus/content/repositories/releases</url>
         </repository>
 
         <snapshotRepository>
             <id>paytronix-snapshots</id>
-            <url>https://greylock.corp.paytronix.com/nexus/content/repositories/snapshots</url>
+            <url>https://nexus.corp.paytronix.com/nexus/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
