--- a/pom.xml
+++ b/pom.xml
@@ -258,7 +258,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>3.1.7-SNAPSHOT</version>
+                <version>3.2.0</version>
                 <configuration>
                     <useZincServer>true</useZincServer>
                     <recompileMode>incremental</recompileMode>
@@ -361,7 +361,7 @@
                         <plugin>
                             <groupId>net.alchim31.maven</groupId>
                             <artifactId>scala-maven-plugin</artifactId>
-                            <version>3.1.7-SNAPSHOT</version>
+                            <version>3.2.0</version>
                             <configuration>
                                 <scalaVersion>${scala.version}</scalaVersion>
                                 <jvmArgs>
