--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
                 <groupId>net.liftweb</groupId>
                 <artifactId>lift-util_2.11</artifactId>
                 <version>2.6-RC1</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.scala-lang</groupId>
+                        <artifactId>scala-compiler</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>net.liftweb</groupId>
