--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,12 @@
                 <groupId>net.liftweb</groupId>
                 <artifactId>lift-json_2.11</artifactId>
                 <version>2.6-RC1</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.scala-lang</groupId>
+                        <artifactId>scalap</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
