--- a/packaging/pom.xml
+++ b/packaging/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>paytronix.utils.internal</groupId>
         <artifactId>parent</artifactId>
-        <version>14.1-droop-SNAPSHOT</version>
+        <version>16.0-fozziebear-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -12,7 +12,7 @@
     <artifactId>packaging</artifactId>
     <packaging>pom</packaging>
     <name>Utils Packaging</name>
-    <version>14.1-droop-SNAPSHOT</version>
+    <version>16.0-fozziebear-SNAPSHOT</version>
 
     <build>
         <plugins>
