--- a/extendedreflection/pom.xml
+++ b/extendedreflection/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.paytronix.utils</groupId>
         <artifactId>parent</artifactId>
-        <version>16.0-airheads-SNAPSHOT</version>
+        <version>17.0.20170202</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -27,7 +27,7 @@
     <groupId>com.paytronix.utils</groupId>
     <artifactId>extendedreflection</artifactId>
     <packaging>jar</packaging>
-    <version>16.0-airheads-SNAPSHOT</version>
+    <version>17.0.20170202</version>
 
     <name>Paytronix Utils - Extended Reflection</name>
     <description>Library which melds Java reflection and Scala compiler signature inspection to generate a richer reflection model than just Java reflection can provide</description>
