--- a/java/pom.xml
+++ b/java/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>paytronix.utils.internal</groupId>
         <artifactId>parent</artifactId>
-        <version>16.0-fozziebear-SNAPSHOT</version>
+        <version>17.0-gonzo-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -12,7 +12,7 @@
     <artifactId>java</artifactId>
     <packaging>jar</packaging>
     <name>Paytronix Internal Utils - Miscellaneous Java Utilities</name>
-    <version>16.0-fozziebear-SNAPSHOT</version>
+    <version>17.0-gonzo-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
