--- a/scm/pom.xml
+++ b/scm/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>paytronix.utils.internal</groupId>
         <artifactId>parent</artifactId>
-        <version>16.0-fozziebear-SNAPSHOT</version>
+        <version>17.0-gonzo-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -12,7 +12,7 @@
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
     <name>Paytronix Internal Utils - SCM</name>
-    <version>16.0-fozziebear-SNAPSHOT</version>
+    <version>17.0-gonzo-SNAPSHOT</version>
 
     <modules>
         <module>common</module>
