--- a/scm/utility/pom.xml
+++ b/scm/utility/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>paytronix.utils.internal.scm</groupId>
         <artifactId>parent</artifactId>
-        <version>16.0-fozziebear-SNAPSHOT</version>
+        <version>17.0-gonzo-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -12,7 +12,7 @@
     <artifactId>utility</artifactId>
     <packaging>jar</packaging>
     <name>Paytronix Internal Utils - SCM Utilities</name>
-    <version>16.0-fozziebear-SNAPSHOT</version>
+    <version>17.0-gonzo-SNAPSHOT</version>
 
     <build>
         <plugins>
