[issue45289] Bump version to 17.1-honeydewbunsen-SNAPSHOT to allow PXS to depend upon the build

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <groupId>paytronix.utils.internal</groupId>
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
-    <version>17.0-gonzo-SNAPSHOT</version>
+    <version>17.1-honeydewbunsen-SNAPSHOT</version>
 
     <name>Paytronix Internal Utils - Parent</name>
 
