--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>paytronix.utils.internal</groupId>
         <artifactId>parent</artifactId>
-        <version>17.0-gonzo-SNAPSHOT</version>
+        <version>17.1-honeydewbunsen-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -12,7 +12,7 @@
     <artifactId>standalone</artifactId>
     <packaging>jar</packaging>
     <name>Paytronix Internal Utils - Standalone Utility Support</name>
-    <version>17.0-gonzo-SNAPSHOT</version>
+    <version>17.1-honeydewbunsen-SNAPSHOT</version>
 
     <build>
         <plugins>
