--- a/pom.xml
+++ b/pom.xml
@@ -154,12 +154,12 @@
             <dependency>
                 <groupId>net.liftweb</groupId>
                 <artifactId>lift-common_2.11</artifactId>
-                <version>2.6-RC1</version>
+                <version>2.6</version>
             </dependency>
             <dependency>
                 <groupId>net.liftweb</groupId>
                 <artifactId>lift-util_2.11</artifactId>
-                <version>2.6-RC1</version>
+                <version>2.6</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.scala-lang</groupId>
@@ -170,7 +170,7 @@
             <dependency>
                 <groupId>net.liftweb</groupId>
                 <artifactId>lift-json_2.11</artifactId>
-                <version>2.6-RC1</version>
+                <version>2.6</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.scala-lang</groupId>
