[issue46188] Hacky box coder that should be removed when we get rid of boxes. Seriously don't use the box coder unless you're okay with itt eating Failures/ParamFailures

--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,8 @@
                 <artifactId>validation</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <!-- SCALAUPGRADE Remove me after you've removed boxes pls -->
+             <dependency><groupId>net.liftweb</groupId><artifactId>lift-common_2.11</artifactId><version>2.6</version></dependency>
         </dependencies>
     </dependencyManagement>
 
