--- a/interchange/json/pom.xml
+++ b/interchange/json/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>interchange-base</artifactId>
         </dependency>
 
+        <!--SCALAUPGRADE REMOVE ME -->
+         <dependency>
+            <groupId>net.liftweb</groupId>
+            <artifactId>lift-common_2.11</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.specs2</groupId>
             <artifactId>specs2_2.11</artifactId>
