--- a/interchange/pom.xml
+++ b/interchange/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.paytronix.utils</groupId>
         <artifactId>parent</artifactId>
-        <version>17.1-burrito-SNAPSHOT</version>
+        <version>17.2-cheesecake-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -27,7 +27,7 @@
     <groupId>com.paytronix.utils</groupId>
     <artifactId>interchange</artifactId>
     <packaging>jar</packaging>
-    <version>17.1-burrito-SNAPSHOT</version>
+    <version>17.2-cheesecake-SNAPSHOT</version>
 
     <name>Paytronix Utils - Interchange</name>
     <description>Library which allows for reflection-based transcoding of Scala and Java objects to/from JSON, Avro, and MongoDB with minimal metadata.</description>
