--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <groupId>com.paytronix.utils</groupId>
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
-    <version>18.0-emilybear-SNAPSHOT</version>
+    <version>18.1-doritos-SNAPSHOT</version>
 
     <name>Paytronix Utils - Parent</name>
     <inceptionYear>2009</inceptionYear>
