--- a/interchange/json/pom.xml
+++ b/interchange/json/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.paytronix.utils.interchange</groupId>
         <artifactId>parent</artifactId>
-        <version>18.2-eclair-SNAPSHOT</version>
+        <version>18.3-boylstonhotfix1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -27,7 +27,7 @@
     <groupId>com.paytronix.utils</groupId>
     <artifactId>interchange-json</artifactId>
     <packaging>jar</packaging>
-    <version>18.2-eclair-SNAPSHOT</version>
+    <version>18.3-boylstonhotfix1-SNAPSHOT</version>
 
     <name>Paytronix Utils - Interchange JSON</name>
     <description>Interchange library for transcoding objects to JSON using Jackson</description>
