--- a/interchange/pom.xml
+++ b/interchange/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.paytronix.utils</groupId>
         <artifactId>parent</artifactId>
-        <version>18.2-eclair-SNAPSHOT</version>
+        <version>18.3-boylstonhotfix1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -27,7 +27,7 @@
     <groupId>com.paytronix.utils.interchange</groupId>
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
-    <version>18.2-eclair-SNAPSHOT</version>
+    <version>18.3-boylstonhotfix1-SNAPSHOT</version>
 
     <name>Paytronix Utils - Interchange</name>
     <description>Family of libraries which implement rich transcoding to and from various formats with minimal required metadata but high customizability.</description>
