[no issue] Changed property for version from project.version to revision because Maven is weirdly restrictive in this; added flatten-maven-plugin so the POMs that get deployed with the deploy action have the actual version substituted in because Maven is weird

--- a/interchange/liftjson/pom.xml
+++ b/interchange/liftjson/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.paytronix.utils.interchange</groupId>
         <artifactId>parent</artifactId>
-        <version>${project.version}</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -27,7 +27,6 @@
     <groupId>com.paytronix.utils</groupId>
     <artifactId>interchange-liftjson</artifactId>
     <packaging>jar</packaging>
-    <version>${project.version}</version>
 
     <name>Paytronix Utils - Interchange Lift JSON</name>
     <description>Interchange library for transcoding objects to Lift JSON AST</description>
