--- a/interchange/avro/pom.xml
+++ b/interchange/avro/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.paytronix.utils.interchange</groupId>
         <artifactId>parent</artifactId>
-        <version>${project.version}</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -27,7 +27,6 @@
     <groupId>com.paytronix.utils</groupId>
     <artifactId>interchange-avro</artifactId>
     <packaging>jar</packaging>
-    <version>${project.version}</version>
 
 <!--     <name>Paytronix Maven Utils - SLF4J Logging</name>
     <description>Library to allow logging via SLF4j from Maven plugins by using the Maven logger. Gratefully copied from https://github.com/carrot-garden/carrot-maven</description>
