--- a/interchange/base/pom.xml
+++ b/interchange/base/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.paytronix.utils.interchange</groupId>
         <artifactId>parent</artifactId>
-        <version>${project.version}</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -27,7 +27,6 @@
     <groupId>com.paytronix.utils</groupId>
     <artifactId>interchange-base</artifactId>
     <packaging>jar</packaging>
-    <version>${project.version}</version>
 
     <name>Paytronix Utils - Interchange Base</name>
     <description>Interchange, a library for rich transcoding between objects and various formats.</description>
