--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.paytronix.utils</groupId>
         <artifactId>parent</artifactId>
-        <version>${project.version}</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -27,7 +27,6 @@
     <groupId>com.paytronix.utils</groupId>
     <artifactId>scala</artifactId>
     <packaging>jar</packaging>
-    <version>${project.version}</version>
 
     <name>Paytronix Utils - Miscellaneous Scala</name>
     <description>Library with various Scala utilities and types.</description>
