[no issue] Changed developer from Ross to me

--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
 
     <developers>
         <developer>
-            <id>rmacleod</id>
-            <name>Ross MacLeod</name>
-            <email>rmacleod@paytronix.com</email>
+            <id>mexplosion</id>
+            <name>Matt Explosion</name>
+            <email>mexplosion@paytronix.com</email>
         </developer>
     </developers>
 
