--- a/validation/pom.xml
+++ b/validation/pom.xml
@@ -65,7 +65,7 @@
     <dependencies>
         <dependency>
             <groupId>com.chuusai</groupId>
-            <artifactId>shapeless_2.11</artifactId>
+            <artifactId>shapeless_${scala.compatibility.version}</artifactId>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
@@ -79,15 +79,23 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
         </dependency>
-
         <dependency>
             <groupId>com.paytronix.utils</groupId>
             <artifactId>scala</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.specs2</groupId>
-            <artifactId>specs2_2.11</artifactId>
+            <artifactId>specs2-core_${scala.compatibility.version}</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.specs2</groupId>
+            <artifactId>specs2-junit_${scala.compatibility.version}</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.specs2</groupId>
+            <artifactId>specs2-scalacheck_${scala.compatibility.version}</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
