[COM-51726] Changed version to 20.1-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
     </distributionManagement>
 
     <properties>
-        <revision>20.0-hiawatha_pxs-SNAPSHOT</revision>
+        <revision>20.1-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scala.version>2.11.12</scala.version>
     </properties>
