[no issue] dresultg improvements

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
     </distributionManagement>
 
     <properties>
-        <revision>21.1-SNAPSHOT</revision>
+        <revision>21.1-develop-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scala.version>2.11.12</scala.version>
     </properties>
